--- a/docs/docs/config/wrapper.mdx
+++ b/docs/docs/config/wrapper.mdx
@@ -71,7 +71,7 @@ Then, update `viteshot.config.js` to point to the wrapper component:
 module.exports = {
   // ...
   wrapper: {
-    path: "__viteshot__/ScreenshotWrapper",
+    path: "__viteshot__/ScreenshotWrapper.tsx",
     componentName: "Wrapper",
   },
 };
