--- a/docs/docs/getting-started.mdx
+++ b/docs/docs/getting-started.mdx
@@ -38,7 +38,7 @@ To set up Viteshot in your project, run:
 $ viteshot init
 ```
 
-Viteshow will automatically detect which framework you're using and set up the appropriate defaults for you.
+Viteshot will automatically detect which framework you're using and set up the appropriate defaults for you.
 
 ## Create your first screenshot
 
