Switch to ViteShot capitalisation to help readability

--- a/docs/docs/async-screenshots.mdx
+++ b/docs/docs/async-screenshots.mdx
@@ -4,7 +4,7 @@ sidebar_position: 4
 
 # Async Screenshots
 
-Viteshot lets you specify a `beforeScreenshot` hook, allowing you to wait for a specific state or interact with the component before taking the screenshot.
+ViteShot lets you specify a `beforeScreenshot` hook, allowing you to wait for a specific state or interact with the component before taking the screenshot.
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
