--- a/docs/docs/config/wrapper.mdx
+++ b/docs/docs/config/wrapper.mdx
@@ -79,6 +79,6 @@ module.exports = {
 
 :::tip Do you use React Preview?
 
-You can use the same wrapper component for both Viteshot and [React Preview](https://reactpreview.com) by copy-pasting the `wrapper` config in `reactpreview.config.js`.
+You can use the same wrapper component for both ViteShot and [React Preview](https://reactpreview.com) by copy-pasting the `wrapper` config in `reactpreview.config.js`.
 
 :::
