--- a/docs/docs/getting-started.mdx
+++ b/docs/docs/getting-started.mdx
@@ -6,9 +6,9 @@ sidebar_position: 2
 
 ## Overview
 
-Viteshot (named after [Vite](https://vitejs.dev), pronounced `/vit/`) is a command-line tool that renders screenshots from components.
+ViteShot (named after [Vite](https://vitejs.dev), pronounced `/vit/`) is a command-line tool that renders screenshots from components.
 
-You can learn more about the rationale behind Viteshot in the [Why Viteshot](/docs/why) section.
+You can learn more about the rationale behind ViteShot in the [Why ViteShot](/docs/why) section.
 
 ## Installation
 
@@ -32,13 +32,13 @@ $ pnpm add viteshot playwright
 
 ## First Time Setup
 
-To set up Viteshot in your project, run:
+To set up ViteShot in your project, run:
 
 ```sh
 $ viteshot init
 ```
 
-Viteshot will automatically detect which framework you're using and set up the appropriate defaults for you.
+ViteShot will automatically detect which framework you're using and set up the appropriate defaults for you.
 
 ## Create your first screenshot
 
